--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="node_modules/sqc-ui-components/dist/styles.css"
+    />
     <title>Simple Quiz Composer</title>
   </head>
   <body>
